// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Cinq Etoiles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2018
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2020 : 37%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2022 : 51%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2023 : 65%
Ambition à quatre ans : 80%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2024 : 75%
Ambition à quatre ans : 80%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Deux Etoiles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2020
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2022 : 37%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Plus que 5% à réaliser pour candidater, d'après votre score actuel !
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Deux Etoiles Directement 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2022
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Plus que 8% à réaliser pour candidater, d'après votre score actuel !
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Deux Etoiles Possibles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2022
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Vous atteignez le score requis, félicitations ! Candidatez dès à présent ou continuez à progresser jusqu’à la fin de votre cycle de labellisation.
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 50%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Deux Etoiles Score Nul 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2020
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2022
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 50%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Non Labellise 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Non labellisé
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Non Labellise Pas De Donnees 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Non labellisé
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Quatre Etoiles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2018
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2020 : 37%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2022 : 51%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2023 : 65%
Ambition à quatre ans : 80%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Plus que 6% à réaliser pour candidater, d'après votre score actuel !
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Trois Etoiles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2018
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2020 : 37%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2022 : 51%
Ambition à quatre ans : 62%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Plus que 14% à réaliser pour candidater, d'après votre score actuel !
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Trois Etoiles Possibles 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2020
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score labellisé en 2022 : 35%
Ambition à quatre ans : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Vous atteignez le score requis, félicitations ! Candidatez dès à présent ou continuez à progresser jusqu’à la fin de votre cycle de labellisation.
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/TableauBord/NiveauLabellisation Une Etoile 1`] = `
<div
  className="flex flex-col items-center mt-4"
>
  <div
    className="font-semibold text-center mb-4 text-xl"
  >
    Niveau de labellisation actuel
  </div>
  <div
    className="flex space-x-4 pb-12"
  >
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Reconnaissance obtenue en 2022
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#0063CB"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Plus que 10% à réaliser pour candidater, d'après votre score actuel !
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 50%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 65%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
    <svg
      fill="none"
      height="38"
      viewBox="0 0 39 38"
      width="39"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Score requis : 75%
      </title>
      <path
        d="M19.5002 30.434L7.74518 37.014L10.3702 23.8006L0.478516 14.654L13.8569 13.0673L19.5002 0.833984L25.1435 13.0673L38.5219 14.654L28.6302 23.8006L31.2552 37.014L19.5002 30.434Z"
        fill="#e5e5e5"
      />
    </svg>
  </div>
</div>
`;
